<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:contentDescription="@string/content_description_favorite"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:contentDescription="@string/content_description_more"
        android:title="@string/save"
        app:showAsAction="never" />
    <item
        android:id="@+id/upload"
        android:contentDescription="@string/content_description_more"
        android:title="@string/upload"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_all"
        android:contentDescription="@string/content_description_more"
        android:title="@string/delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:contentDescription="@string/content_description_more"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
